// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation.addMessage should add message to specified chat 1`] = `
Object {
  "addMessage": Object {
    "content": "Hello World",
  },
}
`;

exports[`Mutation.addMessage should add message to specified chat 2`] = `
Object {
  "chat": Object {
    "id": "111111111111111111111111",
    "lastMessage": Object {
      "content": "Hello World",
    },
  },
}
`;
